--- a/LocalVibes/Views/Profile/Event.cshtml
+++ b/LocalVibes/Views/Profile/Event.cshtml
@@ -2,7 +2,7 @@
 @model ProfileEventViewModel
 @{
     ViewData["Title"] = "Local Vibes";
-    Layout = null;
+    Layout = "_Layout";
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -34,9 +34,7 @@
             </h1>
             <div>
                 <h2>DESCRIPCION</h2>
-                <p>adlkjfaskldjglksjfglañsfjglfkjgalfñjgadlñfgjaldfkzgjalñfgjaslñfjgalsfkgjaslfkg</p>
-                <p>adlkjfaskldjglksjfglañsfjglfkjgalfñjgadlñfgjaldfkzgjalñfgjaslñfjgalsfkgjaslfkg</p>
-                <p>adlkjfaskldjglksjfglañsfjglfkjgalfñjgadlñfgjaldfkzgjalñfgjaslñfjgalsfkgjaslfkg</p>
+                <p>@Model.</p>
             </div>
             <div class="Event__left-section__labels">
                 <app-label
