--- a/LocalVibes/Views/Profile/User.cshtml
+++ b/LocalVibes/Views/Profile/User.cshtml
@@ -18,6 +18,12 @@
 	<link rel="stylesheet" href="~/css/Views/Shared/HorizontalCard.css"/>
 </head>
 <body>
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @TempData["ErrorMessage"]
+        </div>
+    }
     <div class="User__page-grid">
         <div class="User__user-section">
             @Html.Partial("_Avatar", new AvatarModel{Size="200px"})
@@ -54,29 +60,35 @@
             </div>
         </div>
         <div class="User__project-seciton">
-            <h2>Projectos Favoritos</h2>
+            <h2>Proyectos Favoritos</h2>
             @foreach (var project in Model.ProjectsFavotire)
             {
-                @Html.Partial("_HorizontalCard", new CardModel
-               {
-                   Title = project.ProjectName,
-                   Subtitle = $"Desde :{(project.FormationDate.HasValue ? project.FormationDate.Value.ToString("dd/MM/yyyy") : "Fecha no disponible")}",
-                   Image = project.ProjectImage != null ? project.ProjectImage : null // Muestra la imagen si está disponible
-               })
+                <a asp-area="" asp-controller="Profile" asp-action="Project" asp-route-id="@project.IdProject" class="User__project-link">
+                    @Html.Partial("_HorizontalCard", new CardModel
+                    {
+                        Title = project.ProjectName,
+                        Subtitle = $"Desde :{(project.FormationDate.HasValue ? project.FormationDate.Value.ToString("dd/MM/yyyy") : "Fecha no disponible")}",
+                        Image = project.ProjectImage != null ? project.ProjectImage : null // Muestra la imagen si está disponible
+                    })
+                </a>
             }
         </div>
+
         <div class="User__event-seciton">
             @foreach (var evento in Model.Eventos)
             {
-                @Html.Partial("_VerticalCard", new CardModel
-               {
-                   Title = evento.EventTitle,
-                   Subtitle = $"Fecha: {evento.EventDate.ToShortDateString()}",
-                   Description = evento.EventDescription,
-                   Image = evento.EventImage != null ? evento.EventImage : null // Muestra la imagen si está disponible
-               })
+                <a asp-area="" asp-controller="Profile" asp-action="Event" asp-route-id="@evento.IdEvent" class="User__event-link">
+                    @Html.Partial("_VerticalCard", new CardModel
+                    {
+                        Title = evento.EventTitle,
+                        Subtitle = $"Fecha: {evento.EventDate.ToShortDateString()}",
+                        Description = evento.EventDescription,
+                        Image = evento.EventImage != null ? evento.EventImage : null // Muestra la imagen si está disponible
+                    })
+                </a>
             }
         </div>
+
     </div>
 </body>
 </html>
