--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -1,10 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Local Vibes";
     Layout = null;
-
-    // Obtén el nombre de usuario desde la sesión
-    var loggedInUsername = Context.Session.GetString("Username");
-    var loggedInProject = Context.Session.GetString("ProjectName"); // Opcional, si tienes proyectos en la sesión
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -18,6 +14,12 @@
     @Html.Partial("_Font")
 </head>
 <body>
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger">
+            @TempData["ErrorMessage"]
+        </div>
+    }
     <div class="content-wrapper">
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -37,33 +39,28 @@
                             </li>
                         </ul>
 
-                        @if (!string.IsNullOrEmpty(loggedInUsername))
-                        {
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="User">Bienvenido, @loggedInUsername</a>
-                                </li>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="User">
+                                    Bienvenido, @Context.Session.GetString("Username")
+                                </a>
+                            </li>
 
-                                @if (!string.IsNullOrEmpty(loggedInProject))
-                                {
-                                    <li>
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Project">Projecto: @loggedInProject</a>
-                                    </li>
-                                }
+                            @if (!string.IsNullOrEmpty(Context.Session.GetString("ProjectName")))
+                            {
+                                <li>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Project">
+                                        Proyecto: @Context.Session.GetString("ProjectName")
+                                    </a>
+                                </li>
+                            }
 
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="Logout">Cerrar sesión</a>
-                                </li>
-                            </ul>
-                        }
-                        else
-                        {
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="Login">Iniciar sesión</a>
-                                </li>
-                            </ul>
-                        }
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="Logout">
+                                    Cerrar sesión
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
