--- a/LocalVibes/Views/Shared/_HorizontalCard.cshtml
+++ b/LocalVibes/Views/Shared/_HorizontalCard.cshtml
@@ -7,7 +7,7 @@
     }
     else
     {
-        <img src="data:image /png;base64 Convert.ToBase64String(Model.Image)" alt="@Model.Image" />
+        <img src="data:image/jpg;base64,@Convert.ToBase64String(Model.Image)" alt="@Model.Image" />
     }
     <div class="HorizontalCard__body" >
         <div>
