--- a/LocalVibes/Views/Shared/_Avatar.cshtml
+++ b/LocalVibes/Views/Shared/_Avatar.cshtml
@@ -1,5 +1,9 @@
 @model LocalVibes.Models.AvatarModel
-
-<div class="Avatar" style="background-image: url('@Model.ImageUrl'); width:@Model.Size; height:@Model.Size;">
-</div>
-
+@if(@Model.Image == null)
+{
+	<img src="~/Assets/default.png" style="width:@Model.Size; height:@Model.Size;" />
+}
+else
+{
+	<img src="data:image/jpg;base64,@Convert.ToBase64String(Model.Image)" alt="@Model.Image" style="width:@Model.Size; height:@Model.Size;" />
+}
