--- a/LocalVibes/wwwroot/css/Views/Shared/ReviewCard.css
+++ b/LocalVibes/wwwroot/css/Views/Shared/ReviewCard.css
@@ -1,23 +1,70 @@
 .ReviewCard {
     background-color: #FFF;
     display: flex;
-    width: 80%;
     flex-direction: column;
     border-radius: 2em;
     padding: 2em;
     color: #333333;
+    width: 80%;
+    margin: 20px 0;
 }
+
 .ReviewCard__header {
     display: flex;
-    gap:1em;
+    gap: 1em;
     flex-direction: row;
     align-items: center;
 }
-.ReviewCard__header__date{
+
+.ReviewCard__header__date {
     color: #B3B3B3;
+    font-size: 14px;
 }
-.ReviewCard__comment p {
+
+.ReviewCard__comment {
     text-align: center;
     line-break: auto;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    margin-top: 1em;
+}
+
+    form textarea {
+        width: 100%;
+        height: 100px;
+        border-radius: 10px;
+        padding: 1em;
+        font-size: 14px;
+        border: 1px solid #ccc;
+        font-family: Arial, sans-serif;
+    }
+
+    form select {
+        padding: 0.5em;
+        font-size: 16px;
+        border-radius: 10px;
+        border: 1px solid #ccc;
+        font-family: Arial, sans-serif;
+    }
+
+    form option{
+        text
+    }
+
+    form button {
+        padding: 0.75em;
+        border: none;
+        background-color: #4CAF50;
+        color: white;
+        font-size: 16px;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+        form button:hover {
+            background-color: #45a049;
+        }
