--- a/LocalVibes/Views/Authentication/SignUpProject.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpProject.cshtml
@@ -2,6 +2,7 @@
 @model SignUpProjectViewModel
 @{
 	ViewData["Title"] = "Nuevo Proyecto";
+	Layout = null;
 }
 
 <!DOCTYPE html>
@@ -84,6 +85,13 @@
 				</p>
 			</div>
 		</form>
+
+		<p>Ya tienes cuenta?</p>
+		<app-button button-text="Usuario"
+					button-type="primary"
+					onclick="window.location.href='/Authentication/Login'" style="width: 150px">
+		</app-button>
+
 
 	</div>
 	<script src="~/js/MultiSelect.js"></script>
