--- a/LocalVibes/wwwroot/css/Views/Landing/index.css
+++ b/LocalVibes/wwwroot/css/Views/Landing/index.css
@@ -2,7 +2,7 @@ body, html {
     margin: 0px;
     padding: 0px;
     box-sizing: content-box;
-    color: black; /* Texto blanco */
+    color: black; 
 }
 #id {
   width: 60;
