--- a/LocalVibes/Views/Authentication/SignUpProject.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpProject.cshtml
@@ -11,9 +11,9 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/css/Views/Authentication/Login.css" />
-	<link rel="stylesheet" href="~/css/multiSelect.css"/>
+	<link rel="stylesheet" href="~/css/multiSelect.css" />
 </head>
-<body>
+<body class="bodyWhite">
 	<!-- Titulo de la pagina -->
 	<div class="signUp-container">
 		<div class="signUp-title">
@@ -86,11 +86,11 @@
 			</div>
 		</form>
 
-		<p>Ya tienes cuenta?</p>
+	@* 	<p>Ya tienes cuenta?</p>
 		<app-button button-text="Usuario"
 					button-type="primary"
 					onclick="window.location.href='/Authentication/Login'" style="width: 150px">
-		</app-button>
+		</app-button> *@
 
 
 	</div>
