--- a/LocalVibes/Views/Authentication/SignUpUser.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpUser.cshtml
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/css/Views/Authentication/Login.css" />
 </head>
-<body>
+<body class="bodyWhite">
 	<div class="signup-container">
 
 		<h2>REGISTRAR USUARIO NUEVO</h2>
@@ -26,56 +26,48 @@
 				<input asp-for="Username" class="form-control" />
 				<span asp-validation-for="Username" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="FirstName">Nombre</label>
 				<input asp-for="FirstName" class="form-control" />
 				<span asp-validation-for="FirstName" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="LastName">Apellido</label>
 				<input asp-for="LastName" class="form-control" />
 				<span asp-validation-for="LastName" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="UserEmail">Correo electrónico</label>
 				<input asp-for="UserEmail" type="email" class="form-control" />
 				<span asp-validation-for="UserEmail" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="Phone">Teléfono</label>
 				<input asp-for="Phone" class="form-control" />
 				<span asp-validation-for="Phone" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="Password">Contraseña</label>
 				<input asp-for="Password" type="password" class="form-control" />
 				<span asp-validation-for="Password" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="ConfirmPassword">Confirmar contraseña</label>
 				<input asp-for="ConfirmPassword" type="password" class="form-control" />
 				<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="Birthdate">Fecha de nacimiento</label>
 				<input asp-for="Birthdate" type="date" class="form-control" />
 				<span asp-validation-for="Birthdate" class="text-danger"></span>
 			</div>
-			<br />
 
 			<!-- Género -->
 			<div class="form-group">
@@ -85,7 +77,6 @@
 				</select>
 				<span asp-validation-for="IdGenere" class="text-danger"></span>
 			</div>
-			<br />
 
 			<!-- Género -->
 			<div class="form-group">
@@ -95,21 +86,18 @@
 				</select>
 				<span asp-validation-for="IdDocumentType" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="DocumentNumber">Número de documento</label>
 				<input asp-for="DocumentNumber" class="form-control" />
 				<span asp-validation-for="DocumentNumber" class="text-danger"></span>
 			</div>
-			<br />
 
 			<div class="form-group">
 				<label asp-for="ProfileImage">Imagen del Usuario</label>
 				<input asp-for="ProfileImage" type="file" class="form-control" />
 				<span asp-validation-for="ProfileImage" class="text-danger"></span>
 			</div>
-			<br />
 
 			<!-- Botón de Enviar -->
 			<button class="btn btn-primary ml-2 rounded-pill" onclick="submit">Crear usuario</button>
@@ -126,11 +114,11 @@
 
 		</form>
 
-		<p>Ya tienes cuenta?</p>
+	@* 	<p>Ya tienes cuenta?</p>
 		<app-button button-text="Usuario"
 					button-type="primary"
 					onclick="window.location.href='/Authentication/Login'" style="width: 150px">
-		</app-button>
+		</app-button> *@
 
 	</div>
 </body>
