--- a/LocalVibes/Views/Home/About.cshtml
+++ b/LocalVibes/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
-<body>
+<body class="bodyWhite">
     <div class="content-wrapper">
         <div class="container">
             <main role="main" class="pb-3">
