--- a/LocalVibes/wwwroot/css/Views/Home/Explore.css
+++ b/LocalVibes/wwwroot/css/Views/Home/Explore.css
@@ -16,6 +16,7 @@ body,html{
   height: 100%;
   width: 100%;
   z-index: 0;
+  min-height: 100vh;
 }
 .Explore__button {
   position: absolute;
@@ -42,9 +43,6 @@ body,html{
   height: 100%;
   width: 100%;
   transition: width 0.5s ease;
-  padding-top: 7em;
-  padding-left: 1em;
-  padding-right: 1em;
 }
 .Explore__content__left > div:nth-child(1),
 .Explore__content__left > div:nth-child(2) {
