--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -1,14 +1,14 @@
 /* Variables globales */
 :root {
-    --background-dark: #1e1e1e; /* Fondo oscuro */
-    --primary-color: #6A0DAD; /* Morado */
-    --secondary-color: #EDC40E; /* Amarillo */
+    --background-dark: #333333; /* Fondo oscuro */
+    --primary-color: #B336B3; /* Morado */
+    --secondary-color: #FFFB00; /* Amarillo */
     --tertiary-color: #D8D8D8; /* Blanco sucio */
     --text-light: #ffffff; /* Texto blanco */
     --text-dark: #000000; /* Texto negro */
     --border-radius: 8px; /* Bordes redondeados */
     --border-thin: 1px solid #ffffff; /* Bordes finos */
-    --font-family: "Nunito", sans-serif; /* Fuente redondeada y moderna */
+    --font-family: "Poppins", sans-serif; /* Fuente redondeada y moderna */
     --font-optical-sizing: auto;
     --font-style: normal;
     --scroll-behavior: smooth;
@@ -24,6 +24,17 @@ body {
     font-style: var(--font-style);
     font-size: var(--font-size);
     scroll-behavior: var(--scroll-behavior);
+}
+
+/* Fondo y cuerpo */
+.bodyWhite {
+    background-color: var(--background-dark);
+    font-family: var(--font-family);
+    font-optical-sizing: var(--font-optical-sizing);
+    font-style: var(--font-style);
+    font-size: var(--font-size);
+    scroll-behavior: var(--scroll-behavior);
+    color: var(--text-light);
 }
 
 /* Botones generales */
