--- a/LocalVibes/Views/Shared/_Avatar.cshtml
+++ b/LocalVibes/Views/Shared/_Avatar.cshtml
@@ -1,9 +1,11 @@
 @model LocalVibes.Models.AvatarModel
-@if(@Model.Image == null)
+<link rel="stylesheet" href="~/css/Views/Profile/User.css" />
+
+@if (@Model.Image == null)
 {
-	<img src="~/Assets/default.png" style="width:@Model.Size; height:@Model.Size;" />
+	<img src="~/Assets/default.png" style="width:@Model.Size; height:@Model.Size;" class="profile-image" />
 }
 else
 {
-	<img src="data:image/jpg;base64,@Convert.ToBase64String(Model.Image)" alt="@Model.Image" style="width:@Model.Size; height:@Model.Size;" />
+	<img src="data:image/jpg;base64,@Convert.ToBase64String(Model.Image)" alt="@Model.Image" style="width:@Model.Size; height:@Model.Size;" class="profile-image" />
 }
